# IEOR4741_Projects

./: align_inline.cpp  session1_assignment.cpp
Assignment/Session 3/: Session3.cpp
Assignment/hft-crtp-assignment/: CMakeLists.txt  hft
Assignment/hft-crtp-assignment/include/: market_data.hpp  strategy_crtp.hpp  strategy_virtual.hpp  utils.hpp
Assignment/hft-crtp-assignment/src/: main.cpp
Assignment/session-1/: session1_assignment  session1_assignment.cpp
Assignment/session-2/: HFT_engine.cpp  orders_log.csv
Assignment/session-3/: results.csv
Assignment/session-5/: HighPerformanceOrder.cpp  main
Assignment/session-7/: Makefile  benchmark.sh  config.txt  hft_system  hft_system.cpp  main  visualize.py
Assignment/session-7/benchmark_results/: orders_10000_1.csv  orders_10000_3.csv  orders_10000_5.csv  orders_1000_3.csv  orders_50000_3.csv  performance_10000_1.csv  performance_10000_3.csv  performance_10000_5.csv  performance_1000_3.csv  performance_50000_3.csv
Assignment/session9/: Makefile  QUICKSTART.md  README.md  client  client.cpp  demo.sh  order.h  sample_orders.sh  server  server.cpp  test_concurrent.sh  test_demo.sh  video_demo_link.md
Project/FinalPhase/: FinalClient.cpp  FinalServer.cpp  client  server  server.cpp
Project/FinalPhase/Trials/: Client_1.cpp  client2  clientt  clienttest.cpp  serverf  testserver
Project/phase-1/: CMakeLists.txt  README.md  baseline_main.cpp  bench.cpp  bench.hpp  bench_main.cpp  benchmark.cpp  benchmark.csv  cache_locality.csv  cache_locality_main.cpp  kernels.cpp  kernels.hpp  linalg_utils.cpp  linalg_utils.hpp  profile_mm.cpp
Project/phase-2/: .gitignore  hft_client  hft_client.cpp  hft_server  strategy.md
Project/phase-3/: Makefile  README.md  main.cpp  market_snapshot.cpp  market_snapshot.h  order_manager.cpp  order_manager.h  output_log.txt  sample_feed.txt
Project/phase-5/: README.md  order_book.cpp
Project/phrase4/: ARCHITECTURE.md  CMakeLists.txt  DEMO_GUIDE.md  PERFORMANCE_REPORT.md  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SUBMISSION_CHECKLIST.md  VIDEO_DEMO_SCRIPT.md  demo_script.sh  video_demo_link.md
Project/phrase4/include/: MarketData.hpp  MatchingEngine.hpp  Order.hpp  OrderBook.hpp  OrderManager.hpp  Timer.hpp  TradeLogger.hpp
Project/phrase4/src/: MarketData.cpp  MatchingEngine.cpp  OrderBook.cpp  OrderManager.cpp  TradeLogger.cpp  main.cpp
Project/phrase4/test/: test_latency.cpp
Project1/: benchmark.cpp  profile_mm.cpp
